--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>111 Boba Cafe</title>
+    <title>Mrs Lee's Egg Rolls</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <header>
-        <h1>111 Boba Cafe</h1>
+        <h1>Mrs Lee's Egg Rolls</h1>
         <nav>
             <ul>
+                <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">Reservations</a></li>
                 <li><a href="#">Contact Us</a></li>
@@ -16,6 +17,37 @@
         </nav>
     </header>
 <main>
+    <section>
+        <h2>Menu</h2>
+        <p>Place a to-go order</p>
+        <button type="button">Order Now</button>
+    </section>
+    <section>
+        <h2>Appetizers</h2>
+        <img src="images/—Pngtree—yellow  roll decoration illustration_4755609.png" alt="Eggroll">
+        <h3>Egg Rolls</h3>
+        <p>$8.00</p>
+        <p>Eggroll wrap, Vermicelli noodles, Eggs, Pork, Carrots, Cilantro</p>
+        <img src="logo.png" alt="Cream Cheese Wontons">
+        <h3>Cream Cheese Wontons</h3>
+        <p>$8.00</p>
+        <p>Wonton wrap, Cream cheese, Sweet dipping sauce</p>
+        <img src="logo.png" alt="Eggroll">
+        <h3>Pork Dumplings</h3>
+        <p>$10.00</p>
+        <p>Water, Potato flour, Salt, Sugar, Ground pork, Cilantro, Green onion</p>
+    </section>
+    <section>
+        <h2>Entrees</h2>
+        <img src="logo.png" alt="Stuffed Chicken Wings">
+        <h3>Stuffed Chicken Wings</h3>
+        <p>$12.00</p>
+        <p>Chicken wings, Vermicelli Noodles, Carrots, Cilantro</p>
+        <img src="logo.png" alt="Sweet Pork">
+        <h3>Sweet Pork</h3>
+        <p>$15.00</p>
+        <p>Pork, Water, Sugar, Lemon grass, Ginger, Garlic</p>
+    </section>
 
 </main>
 </body>
