added food pictures

--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
     </section>
     <section>
         <h2>Appetizers</h2>
-        <img src="images/—Pngtree—yellow  roll decoration illustration_4755609.png" alt="Eggroll">
+        <img src="images/Egg-Rolls.jpeg" alt="Eggroll">
         <h3>Egg Rolls</h3>
         <p>$8.00</p>
         <p>Eggroll wrap, Vermicelli noodles, Eggs, Pork, Carrots, Cilantro</p>
-        <img src="logo.png" alt="Cream Cheese Wontons">
+        <img src="images/cream-cheese-wonton.jpeg" alt="Cream Cheese Wontons">
         <h3>Cream Cheese Wontons</h3>
         <p>$8.00</p>
         <p>Wonton wrap, Cream cheese, Sweet dipping sauce</p>
-        <img src="logo.png" alt="Eggroll">
+        <img src="images/Pork-Dumplings.jpeg" alt="Eggroll">
         <h3>Pork Dumplings</h3>
         <p>$10.00</p>
         <p>Water, Potato flour, Salt, Sugar, Ground pork, Cilantro, Green onion</p>
     </section>
     <section>
         <h2>Entrees</h2>
-        <img src="logo.png" alt="Stuffed Chicken Wings">
+        <img src="images/Stuffed-chicken-wings.webp" alt="Stuffed Chicken Wings">
         <h3>Stuffed Chicken Wings</h3>
         <p>$12.00</p>
         <p>Chicken wings, Vermicelli Noodles, Carrots, Cilantro</p>
-        <img src="logo.png" alt="Sweet Pork">
+        <img src="images/Sweet-pork.jpeg" alt="Sweet Pork">
         <h3>Sweet Pork</h3>
         <p>$15.00</p>
         <p>Pork, Water, Sugar, Lemon grass, Ginger, Garlic</p>
