--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <title>Mrs Lee's Egg Rolls</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
 <body>
     <header>
+        <img src="images/Mrs-Lees-Egg-Rolls-Logo.png" alt="Restaurant Logo">
         <h1>Mrs Lee's Egg Rolls</h1>
         <nav>
             <ul>
@@ -48,7 +49,15 @@
         <p>$15.00</p>
         <p>Pork, Water, Sugar, Lemon grass, Ginger, Garlic</p>
     </section>
-
+    <section>
+        <h2>Beverages</h2>
+        <h3>Soft Drinks- Coke Products</h3>
+        <p>Coke, Sprite, Fanta, Dr Pepper, </p>
+        <h3>Lemonade</h3>
+        <h3>Thai Tea</h3>
+        <h3>Sugar Cane Juice</h3>
+        <h3>Coffee</h3>
+    </section>
 </main>
 </body>
 </html>
