--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <img src="images/Mrs-Lees-Egg-Rolls-Logo.png" alt="Restaurant Logo">
+        <img src="images/Mrs-Lees-Egg-Rolls-Logo.png" alt="Restaurant Logo" class="Logo">
         <h1>Mrs Lee's Egg Rolls</h1>
         <nav>
             <ul>
@@ -18,38 +18,50 @@
         </nav>
     </header>
 <main>
-    <section>
+    <section id="menu">
         <h2>Menu</h2>
-        <p>Place a to-go order</p>
-        <button type="button">Order Now</button>
+        <div class="to-go">
+            <p>Place a to-go order</p>
+            <button type="button">Order Now</button>
+        </div>    
     </section>
-    <section>
+    <section id="Appetizers">
         <h2>Appetizers</h2>
-        <img src="images/Egg-Rolls.jpeg" alt="Eggroll">
-        <h3>Egg Rolls</h3>
-        <p>$8.00</p>
-        <p>Eggroll wrap, Vermicelli noodles, Eggs, Pork, Carrots, Cilantro</p>
-        <img src="images/cream-cheese-wonton.jpeg" alt="Cream Cheese Wontons">
-        <h3>Cream Cheese Wontons</h3>
-        <p>$8.00</p>
-        <p>Wonton wrap, Cream cheese, Sweet dipping sauce</p>
-        <img src="images/Pork-Dumplings.jpeg" alt="Eggroll">
-        <h3>Pork Dumplings</h3>
-        <p>$10.00</p>
-        <p>Water, Potato flour, Salt, Sugar, Ground pork, Cilantro, Green onion</p>
+        <div class="Eggrolls">
+            <img src="images/Egg-Rolls.jpeg" alt="Eggroll">
+            <h3>Egg Rolls</h3>
+            <p>$8.00</p>
+            <p>Eggroll wrap, Vermicelli noodles, Eggs, Pork, Carrots, Cilantro</p>
+        </div>
+        <div class="Wontons">
+            <img src="images/cream-cheese-wonton.jpeg" alt="Cream Cheese Wontons">
+            <h3>Cream Cheese Wontons</h3>
+            <p>$8.00</p>
+            <p>Wonton wrap, Cream cheese, Sweet dipping sauce</p>
+        </div>
+        <div class="dumplings">
+            <img src="images/Pork-Dumplings.jpeg" alt="Eggroll">
+            <h3>Pork Dumplings</h3>
+            <p>$10.00</p>
+            <p>Water, Potato flour, Salt, Sugar, Ground pork, Cilantro, Green onion</p>
+        </div>    
     </section>
-    <section>
+    <section id="Entrees">
         <h2>Entrees</h2>
-        <img src="images/Stuffed-chicken-wings.webp" alt="Stuffed Chicken Wings">
-        <h3>Stuffed Chicken Wings</h3>
-        <p>$12.00</p>
-        <p>Chicken wings, Vermicelli Noodles, Carrots, Cilantro</p>
-        <img src="images/Sweet-pork.jpeg" alt="Sweet Pork">
-        <h3>Sweet Pork</h3>
-        <p>$15.00</p>
-        <p>Pork, Water, Sugar, Lemon grass, Ginger, Garlic</p>
+        <div class="chicken wings">
+            <img src="images/Stuffed-chicken-wings.webp" alt="Stuffed Chicken Wings">
+            <h3>Stuffed Chicken Wings</h3>
+            <p>$12.00</p>
+            <p>Chicken wings, Vermicelli Noodles, Carrots, Cilantro</p>
+        </div>
+        <div class="sweet pork">
+            <img src="images/Sweet-pork.jpeg" alt="Sweet Pork">
+            <h3>Sweet Pork</h3>
+            <p>$15.00</p>
+            <p>Pork, Water, Sugar, Lemon grass, Ginger, Garlic</p>
+        </div>    
     </section>
-    <section>
+    <section id="Beverages">
         <h2>Beverages</h2>
         <h3>Soft Drinks- Coke Products</h3>
         <p>Coke, Sprite, Fanta, Dr Pepper, </p>
