added smooth scroll navi

--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
 <main>
     <section id="menu">
         <h2>Menu</h2>
+        <div class="menu-nav">
+            <nav>
+                <ul>
+                    <li><a href="#Appetizers">Appetizers</a></li>
+                    <li><a href="#Entrees">Entrees</a></li>
+                    <li><a href="#Beverages">Beverages</a></li>
+
+                </ul>
+            </nav>
+        </div>    
         <div class="to-go">
             <p>Place a to-go order</p>
             <button type="button">Order Now</button>
