--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <header>
         <img src="images/Mrs-Lees-Egg-Rolls-Logo.png" alt="Restaurant Logo" class="Logo">
         <h1>Mrs Lee's Egg Rolls</h1>
+        <!-- Main Navigation Bar  -->
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">Reservations</a></li>
+                <li><a href="#">Order Now</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </nav>
@@ -21,6 +23,7 @@
     <section id="menu">
         <h2>Menu</h2>
         <div class="menu-nav">
+            <!-- Menu Navigation Bar -->
             <nav>
                 <ul>
                     <li><a href="#Appetizers">Appetizers</a></li>
@@ -29,11 +32,7 @@
 
                 </ul>
             </nav>
-        </div>    
-        <div class="to-go">
-            <p>Place a to-go order</p>
-            <button type="button">Order Now</button>
-        </div>    
+        </div>       
     </section>
     <section id="Appetizers">
         <h2>Appetizers</h2>
@@ -73,7 +72,7 @@
     </section>
     <section id="Beverages">
         <h2>Beverages</h2>
-        <h3>Soft Drinks- Coke Products</h3>
+        <h3>Soft Drinks</h3>
         <p>Coke, Sprite, Fanta, Dr Pepper, </p>
         <h3>Lemonade</h3>
         <h3>Thai Tea</h3>
