--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head id="Home">
     <title>Mrs Lee's Egg Rolls</title>
     <link rel="stylesheet" href="styles/stylesheet.css">
 </head>
@@ -11,8 +11,8 @@
         <!-- Main Navigation Bar  -->
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Menu</a></li>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#menu">Menu</a></li>
                 <li><a href="#">Reservations</a></li>
                 <li><a href="#">Order Now</a></li>
                 <li><a href="#">Contact Us</a></li>
@@ -37,7 +37,7 @@
     <section id="Appetizers">
         <h2>Appetizers</h2>
         <div class="Eggrolls">
-            <img src="images/Egg-Rolls.jpeg" alt="Eggroll">
+            <img src="images/Egg-Rolls.jpg" alt="Eggroll">
             <h3>Egg Rolls</h3>
             <p>$8.00</p>
             <p>Eggroll wrap, Vermicelli noodles, Eggs, Pork, Carrots, Cilantro</p>
@@ -58,7 +58,7 @@
     <section id="Entrees">
         <h2>Entrees</h2>
         <div class="chicken wings">
-            <img src="images/Stuffed-chicken-wings.webp" alt="Stuffed Chicken Wings">
+            <img src="images/Chicken-wing.jpg" alt="Stuffed Chicken Wings">
             <h3>Stuffed Chicken Wings</h3>
             <p>$12.00</p>
             <p>Chicken wings, Vermicelli Noodles, Carrots, Cilantro</p>
