added food description

--- a/index.html
+++ b/index.html
@@ -40,30 +40,30 @@
             <img src="images/Egg-Rolls.jpg" alt="Eggroll">
             <h3>Egg Rolls</h3>
             <p>$8.00</p>
-            <p>Eggroll wrap, Vermicelli noodles, Eggs, Pork, Carrots, Cilantro</p>
+            <p>Deep fried savory appetizer filled with vermicelli noodles, carrots, cabbage, and cilantro served with a sweet and spicy chili sauce</p>
         </div>
         <div class="Wontons">
             <img src="images/cream-cheese-wonton.jpeg" alt="Cream Cheese Wontons">
             <h3>Cream Cheese Wontons</h3>
             <p>$8.00</p>
-            <p>Wonton wrap, Cream cheese, Sweet dipping sauce</p>
+            <p>Deep fried sweet cream cheese filled wontons served with sweet jelly sauce</p>
         </div>
         <div class="dumplings">
             <img src="images/Pork-Dumplings.jpeg" alt="Eggroll">
             <h3>Pork Dumplings</h3>
             <p>$10.00</p>
-            <p>Water, Potato flour, Salt, Sugar, Ground pork, Cilantro, Green onion</p>
+            <p>Deep fried savory pork buns with black mushroom fungus</p>
         </div>    
     </section>
     <section id="Entrees">
         <h2>Entrees</h2>
-        <div class="chicken wings">
+        <div class="chicken-wings">
             <img src="images/Chicken-wing.jpg" alt="Stuffed Chicken Wings">
             <h3>Stuffed Chicken Wings</h3>
             <p>$12.00</p>
             <p>Chicken wings, Vermicelli Noodles, Carrots, Cilantro</p>
         </div>
-        <div class="sweet pork">
+        <div class="sweet-pork">
             <img src="images/Sweet-pork.jpeg" alt="Sweet Pork">
             <h3>Sweet Pork</h3>
             <p>$15.00</p>
