--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
             <img src="images/Chicken-wing.jpg" alt="Stuffed Chicken Wings">
             <h3>Stuffed Chicken Wings</h3>
             <p>$12.00</p>
-            <p>Chicken wings, Vermicelli Noodles, Carrots, Cilantro</p>
+            <p>Chicken wing stuffed with vermicelli noodles, carrots, cabbage and cilantro served with white rice and side of hmong pepper</p>
         </div>
         <div class="sweet-pork">
             <img src="images/Sweet-pork.jpeg" alt="Sweet Pork">
             <h3>Sweet Pork</h3>
             <p>$15.00</p>
-            <p>Pork, Water, Sugar, Lemon grass, Ginger, Garlic</p>
+            <p> Slow cooked braised pork belly in a sugar and oyster sauce marinade with hard boiled eggs and topped with a scallion garnish. Served with a side of white rice</p>
         </div>    
     </section>
     <section id="Beverages">
@@ -79,6 +79,35 @@
         <h3>Sugar Cane Juice</h3>
         <h3>Coffee</h3>
     </section>
+    <section>
+        <div class="grid-container">
+            <div class="grid-item grid-item-1">
+                <img src="images/Egg-Rolls.jpg" alt="Eggroll">
+            </div>    
+            <div class="grid-item grid-item-2">    
+                <h3>Egg Rolls</h3>
+                <p>$8.00</p>
+                <p>Deep fried savory appetizer filled with vermicelli noodles, carrots, cabbage, and cilantro served with a sweet and spicy chili sauce</p>
+            </div>
+            <div class="grid-item grid-item-3">
+                <img src="images/cream-cheese-wonton.jpeg" alt="Cream Cheese Wontons">
+            </div>
+            <div class="grid-item grid-item-4">    
+                <h3>Cream Cheese Wontons</h3>
+                <p>$8.00</p>
+                <p>Deep fried sweet cream cheese filled wontons served with sweet jelly sauce</p>
+            </div>
+            <div class="grid-item grid-item-5">
+                <img src="images/Pork-Dumplings.jpeg" alt="Eggroll">
+            </div>
+            <div class="grid-item grid-item-6">
+                <h3>Pork Dumplings</h3>
+                <p>$10.00</p>
+                <p>Deep fried savory pork buns with black mushroom fungus</p>
+            </div>
+        </div>
+
+    </section>    
 </main>
 </body>
 </html>
