--- a/index.html
+++ b/index.html
@@ -34,52 +34,9 @@
             </nav>
         </div>       
     </section>
+    <!-- appetizers begins -->
     <section id="Appetizers">
         <h2>Appetizers</h2>
-        <div class="Eggrolls">
-            <img src="images/Egg-Rolls.jpg" alt="Eggroll">
-            <h3>Egg Rolls</h3>
-            <p>$8.00</p>
-            <p>Deep fried savory appetizer filled with vermicelli noodles, carrots, cabbage, and cilantro served with a sweet and spicy chili sauce</p>
-        </div>
-        <div class="Wontons">
-            <img src="images/cream-cheese-wonton.jpeg" alt="Cream Cheese Wontons">
-            <h3>Cream Cheese Wontons</h3>
-            <p>$8.00</p>
-            <p>Deep fried sweet cream cheese filled wontons served with sweet jelly sauce</p>
-        </div>
-        <div class="dumplings">
-            <img src="images/Pork-Dumplings.jpeg" alt="Eggroll">
-            <h3>Pork Dumplings</h3>
-            <p>$10.00</p>
-            <p>Deep fried savory pork buns with black mushroom fungus</p>
-        </div>    
-    </section>
-    <section id="Entrees">
-        <h2>Entrees</h2>
-        <div class="chicken-wings">
-            <img src="images/Chicken-wing.jpg" alt="Stuffed Chicken Wings">
-            <h3>Stuffed Chicken Wings</h3>
-            <p>$12.00</p>
-            <p>Chicken wing stuffed with vermicelli noodles, carrots, cabbage and cilantro served with white rice and side of hmong pepper</p>
-        </div>
-        <div class="sweet-pork">
-            <img src="images/Sweet-pork.jpeg" alt="Sweet Pork">
-            <h3>Sweet Pork</h3>
-            <p>$15.00</p>
-            <p> Slow cooked braised pork belly in a sugar and oyster sauce marinade with hard boiled eggs and topped with a scallion garnish. Served with a side of white rice</p>
-        </div>    
-    </section>
-    <section id="Beverages">
-        <h2>Beverages</h2>
-        <h3>Soft Drinks</h3>
-        <p>Coke, Sprite, Fanta, Dr Pepper, </p>
-        <h3>Lemonade</h3>
-        <h3>Thai Tea</h3>
-        <h3>Sugar Cane Juice</h3>
-        <h3>Coffee</h3>
-    </section>
-    <section>
         <div class="grid-container">
             <div class="grid-item grid-item-1">
                 <img src="images/Egg-Rolls.jpg" alt="Eggroll">
@@ -103,11 +60,41 @@
             <div class="grid-item grid-item-6">
                 <h3>Pork Dumplings</h3>
                 <p>$10.00</p>
-                <p>Deep fried savory pork buns with black mushroom fungus</p>
+                <p>Deep fried savory pork buns with vermicelli noodles, black mushroom fungus, carrots, and cilantro</p>
+            </div>    
+    </section>
+    <!-- entrees begin  -->
+    <section id="Entrees">
+        <h2>Entrees</h2>
+        <div class="grid-container">
+            <div class="grid-item grid-item-1">
+                <h3>Stuffed Chicken Wings</h3>
+                <p>$12.00</p>
+                <p>Chicken wing stuffed with vermicelli noodles, carrots, cabbage and cilantro served with white rice and side of hmong pepper</p>
+            </div>    
+            <div class="grid-item grid-item-2">    
+                <img src="images/Chicken-wing.jpg" alt="Stuffed Chicken Wings">
             </div>
-        </div>
-
-    </section>    
+            <div class="grid-item grid-item-3">
+                <h3>Sweet Pork</h3>
+                <p>$15.00</p>
+                <p> Slow cooked braised pork belly in a sugar and oyster sauce marinade with hard boiled eggs and topped with a scallion garnish. Served with a side of white rice</p>
+            </div>
+            <div class="grid-item grid-item-4">    
+                <img src="images/Sweet-pork.jpeg" alt="Sweet Pork">
+            </div>
+        </div>        
+    </section>
+    <!-- beverages begin  -->
+    <section id="Beverages">
+        <h2>Beverages</h2>
+        <h3>Soft Drinks <span style="font-size: medium;"><i>$2.00</i></span></h3>
+        <p>Coke, Sprite, Fanta, Dr Pepper, </p>
+        <h3>Lemonade <span style="font-size: medium;"><i>$4.00</i></span></h3>
+        <h3>Thai Tea <span style="font-size: medium;"><i>$8.00</i></span></h3>
+        <h3>Sugar Cane Juice <span style="font-size: medium;"><i>$9.00</i></span></h3>
+        <h3>Ice Coffee <span style="font-size: medium;"><i>$5.00</i></span></h3>
+    </section>  
 </main>
 </body>
 </html>
